Simplify metadata loading to only load in packs at or above tex level; allow metadata of same format to be combined